背景を変更しました

--- a/app/src/main/res/layout/activity_input.xml
+++ b/app/src/main/res/layout/activity_input.xml
@@ -1,14 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/yozora"
     tools:context=".InputActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:backgroundTint="#FFFFFF"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -17,38 +20,45 @@
 
         <Space
             android:layout_width="match_parent"
-            android:layout_height="62dp" />
+            android:layout_height="132dp" />
 
         <TextView
             android:id="@+id/textView4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="title" />
+            android:text="title"
+            android:textColor="#FAF8F8" />
 
         <EditText
             android:id="@+id/etTitle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
-            android:inputType="textPersonName" />
+            android:inputType="textPersonName"
+            app:theme="@style/EditTextStyle"
+            android:textColor="#FAF8F8"/>
 
         <TextView
             android:id="@+id/textView6"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="本文" />
+            android:text="本文"
+            android:textColor="#FAF8F8" />
 
         <EditText
             android:id="@+id/etText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
-            android:inputType="textPersonName" />
+            android:inputType="textPersonName"
+            app:theme="@style/EditTextStyle"
+            android:textColor="#FAF8F8"/>
 
         <Button
             android:id="@+id/selectbutton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:backgroundTint="#BE93E3"
             android:gravity="center"
             android:text="画像選択" />
 
@@ -64,6 +74,7 @@
             android:id="@+id/donebutton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:backgroundTint="#E0B3E8"
             android:text="保存" />
     </LinearLayout>
 
