MainActivityをBaseCompatに、BaseCompatによるtopMargin変化の調整、入力ボタン調整、入力画面の微調整

--- a/app/src/main/res/layout/activity_input.xml
+++ b/app/src/main/res/layout/activity_input.xml
@@ -71,20 +71,21 @@
                     android:gravity="center"
                     android:text="画像選択" />
 
-                <ImageView
-                    android:id="@+id/imageView"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:adjustViewBounds="false"
-                    android:scaleType="centerInside"
-                    tools:srcCompat="@tools:sample/avatars" />
-
                 <Button
                     android:id="@+id/donebutton"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:backgroundTint="#E0B3E8"
                     android:text="保存" />
+
+                <ImageView
+                    android:id="@+id/imageView"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:adjustViewBounds="false"
+                    android:scaleType="fitStart"
+                    tools:srcCompat="@tools:sample/avatars" />
+
             </LinearLayout>
         </ScrollView>
 
